# ciel

./: .gitignore  CONTRIBUTING.md  README.md  flat_out.json  full_out.json  headers.txt  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  yt_out.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build_error.txt  build_log.txt  check_output.json  check_output.txt  check_output_2.txt  installer.nsh  log.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bin_resolver.rs  clipboard.rs  commands.rs  db.rs  downloader.rs  lib.rs  main.rs  scheduler.rs  torrent.rs  tray.rs  video.rs
src-tauri/src/commands/: http.rs  mod.rs  queue.rs  torrent.rs
src-tauri/src/downloader/: types.rs  workers.rs
src-tauri/src/torrent/: files.rs  manager.rs  mod.rs  phases.rs  progress.rs  telemetry.rs  types.rs
src/components/: AddDownloadModal.tsx  ConfirmDialog.tsx  DownloadCard.tsx  DownloadQueue.tsx  History.tsx  ModalPortal.tsx  Scheduler.tsx  Settings.tsx  Sidebar.tsx  TitleBar.tsx  TorrentFileSelector.tsx  VideoPreview.tsx
src/hooks/: useDownloads.ts  useSettings.ts  useUpdater.ts
src/types/: downloads.ts
src/utils/: downloadFormatting.ts  downloadStatus.ts
