[package]
name = "ciel"
version = "0.1.0"
description = "A privacy-focused, blazingly fast download manager"
authors = ["Ciel Team"]
edition = "2021"

[lib]
name = "ciel_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
directories = "5"
librqbit = "8.1.1"
url = "2"
sha2 = "0.10"
percent-encoding = "2"
regex = "1"
zip = "7.0.0"
flate2 = "1.1.5"
arboard = "3"
tauri-plugin-notification = "2.3.3"
hex = "0.4.3"
data-encoding = "2.10.0"
dirs = "6.0.0"
rookie = "0.5.6"

[target.'cfg(windows)'.dependencies]
window-vibrancy = "0.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
